# bobiac

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  _toc.yml  _typos.toml  build.sh  build_local.sh  conf.py  convert_to_colab_notebooks.py  genindex.html  landing-page.html  landing-page.md  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  update_html_styles.py  update_notebook.py  update_notebooks.py  update_notebooks_colab.py  update_notebooks_style.py  update_styles_data.py
.doctrees/: environment.pickle  landing-page.doctree
.doctrees/data/: course_downloads.doctree
.doctrees/student_group_work/: student_group_work.doctree
.github/workflows/: deploy-book.yml
_internal/: HOW_TO_BUILD_LOCALLY.md  JUV.md  README.md  example_python_basics_notebook.ipynb  notebook_info.ipynb  notebook_template.ipynb
_static/scripts/: custom.js
_static/styles/: custom.css
bobiac-book/: _config.yml  _toc.yml  build.sh  conf.py  landing-page.md  update_notebook.py
bobiac-book/data/: course_data.md
bobiac-book/student_group_work/: student_group_work.md
colab_notebooks/: python_basics_notebook.ipynb
colab_notebooks/03_python_basics/: python_basics_notebook.ipynb
colab_notebooks/04_digital_images_intro/: python_for_bioimage_analysis.ipynb
colab_notebooks/07_measurement_and_quantification/: background_correction_notebook.ipynb  measurement_and_quantification_notebook.ipynb
colab_notebooks/08_colocalization/: object_based_colocalization.ipynb  pixel_intensity_based_colocalization_manders.ipynb  pixel_intensity_based_colocalization_pearsons.ipynb
content/01_intro_bioimage_analysis/: bioimage_analysis_intro.html  bioimage_analysis_intro.md
content/02_getting_started_with_python/: getting_started_with_python.html  getting_started_with_python.md
content/03_python_basics/: intro_to_python_II.ipynb  python_basics.html  python_basics.md  python_basics_notebook.html  python_basics_notebook.ipynb
content/04_digital_images_intro/: digital_images_intro.html  digital_images_intro.md  intro_python_for_bioimage_analysis.ipynb  python_for_bioimage_analysis.html  python_for_bioimage_analysis.ipynb  python_for_digital_images.html  python_for_digital_images.md
content/04_python_basics/: python_basics.md  python_basics_notebook.ipynb
content/05_segmantation/: segmentation_intro.md
content/05_segmentation/: segmentation_intro.html  segmentation_intro.md
content/06_classification/: classification.md
content/06_object_classification/: object_classification.html  object_classification.md  object_classification_with_ilastik.html  object_classification_with_ilastik.md
content/07_measurement_and_quantification/: background_correction_notebook.html  background_correction_notebook.ipynb  measurement_and_quantification_intro.html  measurement_and_quantification_intro.md  measurement_and_quantification_notebook.html  measurement_and_quantification_notebook.ipynb  nucleus_measurements.csv
content/08_colocalization/: colocalization_intro.html  colocalization_intro.md  object_based_colocalization.html  object_based_colocalization.ipynb  object_based_colocalization.md  pixel_intensity_based_colocalization.ipynb  pixel_intensity_based_colocalization.md  pixel_intensity_based_colocalization_manders.html  pixel_intensity_based_colocalization_manders.ipynb  pixel_intensity_based_colocalization_pearsons.html  pixel_intensity_based_colocalization_pearsons.ipynb
content/09_colocalization/: pixel_intensity_based_colocalization.md
content/09_reproducibility_and_image_ethics/: reproducibility_and_image_ethics.html  reproducibility_and_image_ethics.md
content/1-intro_bioimage_analysis/: bioimage_analysis_intro.md
content/10_figure_creation/: figure_creation_intro.md  figure_creation_with_python.md
content/11_reproducibility_and_image_ethics/: reproducibility_and_image_ethics.md
content/1_intro_bioimage_analysis/: bioimage_analysis_intro.md
content/2-intro_fluorescence_microscopy/: fluorescence_microscopy_intro.md
content/3-getting_started_with_python/: getting_started_with_python.md
content/4-python_basics/: python_basics.md  python_basics_notebook.ipynb
content/4_python_basics/: python_basics.md  python_basics_notebook.ipynb
content/5-digital_images_intro/: digital_images_intro.md
content/6_segmantation/: segmentation_intro.md
content/7-classification/: classification.md  object_classification_with_ilastik.md
content/8-measurement_and_quantification/: measurement_and_quantification_intro.md
content/9-colocalization/: colocalization_intro.md
content/classification/: classification.md
content/colocalization/: object_based_colocalization.md
content/intro/: fluorescence_microscopy_intro.md
content/segmantation/: segmentation_intro.md
data/: course_data.md  course_data_and_pdfs.md  course_downloads.html  course_downloads.md
student_group_work/: student_group_work.html
(+135 files in other folders)
