[project]
name = "bobiac"
version = "1.0.0"
description = "Boston Bioimage Analysis Course (BoBiAC) - Teaching materials and resources"
authors = [
    {name = "BoBiAC Contributors"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["bioimage", "analysis", "course", "education", "microscopy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "jupyter-book",
    "ndv[jupyter,vispy]",
    "tifffile",
    "scikit-image",
    "matplotlib",
    "beautifulsoup4",
    "imagecodecs",
    "pre-commit",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://iac.hms.harvard.edu/bobiac/2025/"
Repository = "https://github.com/fdrgsp/bobiac"
Documentation = "https://iac.hms.harvard.edu/bobiac/2025/"
"Bug Tracker" = "https://github.com/fdrgsp/bobiac/issues"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.typos.default.extend-words]
# Library names that should not be corrected
"nd2" = "nd2"  # Ignore nd2 library name (don't convert to "and2")
"nd" = "nd"    # Ignore "nd" when used in technical contexts
"ba" = "ba"

[tool.typos.files]
# You can also exclude specific files or patterns if needed
# extend-exclude = ["*.log", "specific_file.txt"]
