[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bobiac"
version = "1.0.0"
description = "Boston Bioimage Analysis Course (BoBiAC) - Teaching materials and resources"
authors = [
    {name = "BoBiAC Contributors"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["bioimage", "analysis", "course", "education", "microscopy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "jupyter-book",
    "ndv[jupyter,vispy]",
    "tifffile",
    "scikit-image",
    "matplotlib",
    "beautifulsoup4",
    "imagecodecs",
    "pre-commit",
    "tqdm",
    "pandas",
    "bioio",
    "bioio_tifffile",
    "rich",
]

[tool.hatch.build.targets.wheel]
# This is a Jupyter Book project - we only want to install dependencies
# Include minimal files to create a valid wheel
include = [
    "README.md",
    "pyproject.toml",
]
exclude = [
    "content/",
    "data/", 
    "student_group_work/",
    "_build/",
    "_static/",
    "__pycache__/",
    "*.pyc",
]

[tool.hatch.build.targets.sdist]
# Exclude content directories from source distribution
exclude = [
    "content/",
    "data/",
    "student_group_work/",
    "_build/",
    "_static/",
    "__pycache__/",
    "*.pyc",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://iac.hms.harvard.edu/bobiac/2025/"
Repository = "https://github.com/fdrgsp/bobiac"
Documentation = "https://iac.hms.harvard.edu/bobiac/2025/"
"Bug Tracker" = "https://github.com/fdrgsp/bobiac/issues"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "UP003",  # type-of-primitive (for python basic notebook)
    "B033"  # duplicate-value (for python basics notebook)
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.typos.default.extend-words]
# Library names that should not be corrected
"nd2" = "nd2"
"nd" = "nd"
"ba" = "ba"
"thr" = "thr"

[tool.typos.files]
# You can also exclude specific files or patterns if needed
# extend-exclude = ["*.log", "specific_file.txt"]
